src/test/ui/borrowck/borrowck-borrow-overloaded-auto-deref.stderr
error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:38:19
   |
LL |     let __isize = &mut x.y;
   |                   ^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:42:19
   |
LL |     let __isize = &mut x.y;
   |                   ^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:50:5
   |
LL |     &mut x.y
   |     ^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:54:5
   |
LL |     &mut x.y
   |     ^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:58:5
   |
LL |     x.y = 3;
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:62:5
   |
LL |     x.y = 3;
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:66:5
   |
LL |     x.y = 3;
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:74:5
   |
LL |     x.set(0, 0);
   |     ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:78:5
   |
LL |     x.set(0, 0);
   |     ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:86:5
   |
LL |     x.y_mut()
   |     ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:90:5
   |
LL |     x.y_mut()
   |     ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:94:6
   |
LL |     *x.y_mut() = 3;
   |      ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:98:6
   |
LL |     *x.y_mut() = 3;
   |      ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-auto-deref.rs:102:6
   |
LL |     *x.y_mut() = 3;
   |      ^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `std::rc::Rc<Point>`

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0596`.
